--- a/src/template/header.html
+++ b/src/template/header.html
@@ -5,7 +5,7 @@
     <meta charset="utf-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1">
-    <link href="https://fonts.googleapis.com/css?family=Montserrat:300,400,500,600,700" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css?family=Fira+Sans:300,400,500,600,700&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="css/main.css">
     <title>test</title>
     <!-- Tweaks for older IEs-->
@@ -17,9 +17,9 @@
 <body>
     <div class="wrapper">
         <header class="header">
-            <div class="header__container container">
+            <div class="header__container container d-flex">
                 <a href="#" class="header__logo logo">
-                    <img src="" alt="Логотип" class="logo__image">
+                    <img src="../img/logo.png" alt="Логотип" class="logo__image">
                 </a>
                 <div class="header__grid">
                     <div class="header__top d-flex">
