--- a/src/template/footer.html
+++ b/src/template/footer.html
@@ -1,9 +1,68 @@
 <footer class="footer">
-    
+    <div class="footer__top">
+        <div class="footer__container container">
+            <h2 class="footer__title title title_color-white">Остались вопросы?</h2>
+            <form action="#" class="footer__form form wrap row d-flex">
+                <div class="form__group col col-4">
+                    <input type="text" class="form__element form__input" placeholder="Ваше имя">
+                </div>
+                <div class="form__group col col-4">
+                    <input type="text" class="form__element form__input" placeholder="Ваш телефон">
+                </div>
+                <div class="form__group col col-4">
+                    <button type="submit" class="form__button footer__button btn">Отправить</button>
+                </div>
+                <div class="form-group col form__group_large terms-conditions">
+                    <label for="license1">
+                        <input id="license1" type="checkbox" class="checkbox-template" checked="">
+                        <span> Я даю согласия на обработку моих <a href="#" class="terms-conditions__link">персональных данных</a></span>
+                    </label>
+                </div>
+            </form>
+        </div>
+        <div class="footer__center">
+            <div class="footer__container container">
+                <div class="footer__grid d-flex wrap row">
+                    <div class="footer__col col col-6">
+                        <img src="../img/logo.png" alt="Логотип" class="footer__logo">
+                    </div>
+                    <div class="footer__col col col-6 d-flex wrap">
+                        <div class="footer__contacts footer-contacts">
+                            <p class="footer-contacts__name">Телефон</p>
+                            <a href="#" class="footer-contacts__el footer-contacts__number">8 (812) 985-86-46</a>
+                        </div>
+                        <div class="footer__contacts footer-contacts">
+                            <p class="footer-contacts__name">Адрес</p>
+                            <div class="footer-contacts__el">ООО «ПРОЕКТ СТРОЙ», пл. Конституции 2, БЦ К-2, офис 2</div>
+                        </div>
+                        <div class="footer__contacts footer-contacts">
+                            <p class="footer-contacts__name">E-mail</p>
+                            <a href="#" class="footer-contacts__el">9858646@gmail.com</a>
+                        </div>
+                        <div class="footer__contacts footer-contacts">
+                            <p class="footer-contacts__name">Режим работы</p>
+                            <div class="footer-contacts__el">Ежедневно с 9-00 до 21-00</div>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </div>
+        <div class="footer__bottom">
+            <div class="footer__container container">
+                <div class="footer__grid d-flex wrap row">
+                    <p class="footer__copy">© Все права защищены</p>
+                    <a href="#" class="footer__personal">Пользовательское соглашение</a>
+                    <a href="#" class="footer__company company">
+                        <img src="../img/logo-banana.png" alt="Логотип BananaWeb" class="company__logo">
+                    </a>
+                </div>
+            </div>
+        </div>
+    </div>
 </footer>
 <div class="remodal" data-remodal-id="modal-callback">
     <div class="remodal__box-title">
-        <div class="remodal__title title title_h3">Заказать звонок</div>
+        <div class="remodal__title title title_h3">Заказать обратного звонка</div>
     </div>
     <div class="contact-form">
         <div class="form-complete">
@@ -21,27 +80,28 @@
                 <div class="form__group form__group_large сol">
                     <input type="tel" class="form__element mask" name="phone" placeholder="Ваш телефон" required>
                 </div>
+                 <div class="form__group form__group_large сol">
+                    <select class="form__element">
+                        <option value=""></option>
+                    </select>
+                </div>
             </div>
             <div class="form-group col form__group_large terms-conditions">
                 <label for="license2">
                     <input id="license2" type="checkbox" class="checkbox-template" checked="">
-                    <span> Я прочитал(а) и принимаю условия <a href="#" class="terms-conditions__link">пользовательского соглашения</a></span>
+                    <span> Я даю согласия на обработку моих <a href="#" class="terms-conditions__link">персональных данных</a></span>
                 </label>
             </div>
             <div class="box-center">
-                <button class="remodal__btn header__callback">
-                    Заказать звонок
+                <button class="remodal__btn">
+                    перезвоните мне
                 </button>
             </div>
         </form>
     </div>
     <button data-remodal-action="close" class="remodal-close"></button>
 </div>
-<div class="remodal modal-form" data-remodal-id="modal-form">
-    <button data-remodal-action="close" class="remodal-close"></button>
-    <h2>Спасибо, ваше сообщение отправлено.</h2>
-    <p>Мы свяжемся с Вами в ближайшее время.</p>
-</div>
+
 </div>
 <div class="arrow-up"></div>
 <script src="js/main.js"></script>
