--- a/src/template/header.html
+++ b/src/template/header.html
@@ -21,22 +21,29 @@
                 <a href="#" class="header__logo logo">
                     <img src="../img/logo.png" alt="Логотип" class="logo__image">
                 </a>
-                <div class="header__grid">
+                <div class="header__grid d-flex">
                     <div class="header__top d-flex">
-                        <a href="#" class="header__number number">8 812 <span class="number__big">985-86-46</span></a>
-                        <a href="#" class="header__number number">8 812 <span class="number__big">985-86-46</span></a>
+                        <div class="header__links d-flex">
+                            <a href="#" class="header__number number">8 (812) <span class="number__big"> 985-86-46</span></a>
+                            <a href="#" class="header__number mail">9858646@gmail.com</a>
+                        </div>
                         <ul class="header__social social d-flex list">
                             <li class="social__item">
-                                <a href="#" class="social__link"></a>
+                                <a href="#" class="social__link social__link_icon social__link_icon_telega"></a>
                             </li>
                             <li class="social__item">
-                                <a href="#" class="social__link"></a>
+                                <a href="#" class="social__link social__link_icon social__link_icon_phone"></a>
                             </li>
                             <li class="social__item">
-                                <a href="#" class="social__link"></a>
+                                <a href="#" class="social__link social__link_icon social__link_icon_whatsup"></a>
                             </li>
                         </ul>
-                        <a href="#" class="header__callback callback-btn">Заказать звонок</a>
+                        <ul class="header__social social d-flex list">
+                            <li class="social__item">
+                                <a href="#" class="social__link social__link_icon social__link_icon_insta"></a>
+                            </li>
+                        </ul>
+                        <a href="#" class="header__callback callback-btn" data-remodal-target="modal-callback">Заказать звонок</a>
                     </div>
                     <nav class="header__nav d-flex">
                         <ul class="header__menu menu d-flex list">
