--- a/src/template/header.html
+++ b/src/template/header.html
@@ -27,43 +27,52 @@
                             <a href="#" class="header__number number">8 (812) <span class="number__big"> 985-86-46</span></a>
                             <a href="#" class="header__number mail">9858646@gmail.com</a>
                         </div>
-                        <ul class="header__social social d-flex list">
-                            <li class="social__item">
-                                <a href="#" class="social__link social__link_icon social__link_icon_telega"></a>
-                            </li>
-                            <li class="social__item">
-                                <a href="#" class="social__link social__link_icon social__link_icon_phone"></a>
-                            </li>
-                            <li class="social__item">
-                                <a href="#" class="social__link social__link_icon social__link_icon_whatsup"></a>
-                            </li>
-                        </ul>
-                        <ul class="header__social social d-flex list">
-                            <li class="social__item">
-                                <a href="#" class="social__link social__link_icon social__link_icon_insta"></a>
-                            </li>
-                        </ul>
+                        <div class="header__wrap d-flex">
+                            <ul class="header__social social d-flex list">
+                                <li class="social__item">
+                                    <a href="#" class="social__link social__link_icon social__link_icon_telega"></a>
+                                </li>
+                                <li class="social__item">
+                                    <a href="#" class="social__link social__link_icon social__link_icon_phone"></a>
+                                </li>
+                                <li class="social__item">
+                                    <a href="#" class="social__link social__link_icon social__link_icon_whatsup"></a>
+                                </li>
+                            </ul>
+                            <ul class="header__social social d-flex list">
+                                <li class="social__item">
+                                    <a href="#" class="social__link social__link_icon social__link_icon_insta"></a>
+                                </li>
+                            </ul>
+                        </div>
                         <a href="#" class="header__callback callback-btn" data-remodal-target="modal-callback">Заказать звонок</a>
                     </div>
                     <nav class="header__nav d-flex">
                         <ul class="header__menu menu d-flex list">
                             <li class="menu__item">
-                                <a href="#" class="menu__link">Виды конструкций</a>
+                                <a href="#goods" class="menu__link">Виды конструкций</a>
                             </li>
                             <li class="menu__item">
-                                <a href="#" class="menu__link">Почему мы</a>
+                                <a href="#features" class="menu__link">Почему мы</a>
                             </li>
                             <li class="menu__item">
-                                <a href="#" class="menu__link">Услуги</a>
+                                <a href="#services" class="menu__link">Услуги</a>
                             </li>
                             <li class="menu__item">
-                                <a href="#" class="menu__link">О нас</a>
+                                <a href="#about" class="menu__link">О нас</a>
                             </li>
                             <li class="menu__item">
-                                <a href="#" class="menu__link">Отзывы</a>
+                                <a href="#reviews" class="menu__link">Отзывы</a>
                             </li>
                         </ul>
                     </nav>
+                </div>
+                 <a href="#" class="header__callback callback-btn callback-btn_mobile" data-remodal-target="modal-callback">Заказать звонок</a>
+
+                <div class="header__hamburger hamburger">
+                    <span class="hamburger__line"></span>
+                    <span class="hamburger__line"></span>
+                    <span class="hamburger__line"></span>
                 </div>
             </div>
         </header>
