--- a/src/style/main.scss
+++ b/src/style/main.scss
@@ -174,8 +174,10 @@ a {
 input,
 textarea {
     @include inputPlaceholder() {
-        color: rgba(#000, 0.65);
+        color: $color-main;
     }
+
+    font-size: rem(14px);
 }
 
 .form {
@@ -632,7 +634,8 @@ th:first-child {
 
     &__image {
         width: 290px;
-        height: 388px;
+        max-height: 420px;
+        height: auto;
         object-fit: cover;
         flex: 1 0;
     }
@@ -677,6 +680,10 @@ th:first-child {
 
     &__col {
         margin-bottom: 20px;
+    }
+
+    &__item {
+        position: relative;
     }
 
 }
@@ -780,6 +787,7 @@ th:first-child {
 
     &__image {
         width: 211px;
+        max-width: 100%;
         height: 121px;
         object-fit: cover;
         display: block;
@@ -800,12 +808,13 @@ th:first-child {
 }
 
 .services {
-    padding: 41px 0px 80px;
+    padding: 41px 0px 60px;
     background-color: $color-main;
     color: #fff;
 
     &__grid {
         margin-top: 50px;
+        justify-content: space-around;
     }
 
     &__name {
@@ -841,6 +850,11 @@ th:first-child {
     &__text {
         font-size: rem(14px);
         line-height: rem(25px);
+    }
+
+    &__col {
+        min-width: 250px;
+        margin-bottom: 20px;
     }
 }
 
@@ -1098,6 +1112,7 @@ th:first-child {
 .form {
 
     &__group {
+        position: relative;
         flex: 1 0 33.33%;
         max-width: 33.33%;
         margin-bottom: 10px;
@@ -1106,24 +1121,54 @@ th:first-child {
             flex: 1 1 100%;
             max-width: 100%;
         }
+
+
     }
 
     &__element {
         width: 100%;
         height: 50px;
-        border-radius: 4px;
+        border-radius: 2px;
         border: none;
         padding: 0px 20px;
+        color: #252525;
     }
 
     &__button {
-        background-color: #c50c13;
+        background-color: #ed1c24;
         padding: 17px 43px;
         border-radius: 4px;
         font-size: rem(14px);
         letter-spacing: 0.050em;
         text-transform: uppercase;
         font-weight: 400;
+    }
+
+    &__icon {
+        position: absolute;
+        top: 50%;
+        transform: translateY(-50%);
+        left: 10px;
+        background-repeat: no-repeat;
+        background-position: center;
+        background-size: 100%;
+        width: 13px;
+        height: 13px;
+        z-index: 99;
+
+        &_person {
+            background-image: url(../img/man-user.png);
+            width: 9px;
+            height: 13px;
+        }
+
+        &_phone {
+            background-image: url(../img/call-answer-form.png);
+        }
+
+        &_time {
+            background-image: url(../img/clock.png);
+        }
     }
 }
 
@@ -1195,8 +1240,6 @@ th:first-child {
     color: #fff
 }
 
-
-
 .form-complete {
     display: none;
 }
@@ -1212,7 +1255,7 @@ th:first-child {
     box-shadow: 0px 9px 95.76px 37.24px rgba(0, 0, 0, 0.48);
     padding: 28px 20px 28px;
 
-    &__title{
+    &__title {
         font-size: rem(17px);
         letter-spacing: 0.050em;
         font-weight: 600;
@@ -1220,7 +1263,7 @@ th:first-child {
     }
 
     &__btn {
-        padding: 20px 10px 20px;
+        padding: 14px 10px 13px;
         width: 100%;
         text-transform: uppercase;
         letter-spacing: 0.050em;
@@ -1230,10 +1273,110 @@ th:first-child {
     }
 }
 
+.remodal__form .form__element {
+    height: 43px;
+    padding: 0px 30px;
+}
+
+.remodal__form .terms-conditions {
+    margin-left: 0;
+    margin-top: 0;
+}
+
 @media only screen and (min-width: 641px) {
     .remodal {
         max-width: 365px;
     }
+}
+
+/* select */
+
+
+.select-hidden {
+    display: none;
+    visibility: hidden;
+    padding-right: 10px;
+    height: 31px;
+    font-weight: 500;
+    text-align: left;
+}
+
+.select {
+    cursor: pointer;
+    display: inline-block;
+    position: relative;
+    font-size: 14px;
+    color: #fff;
+    width: 100%;
+    height: 43px;
+    text-align: left;
+}
+
+.select-styled {
+    position: absolute;
+    top: 0;
+    right: 0;
+    bottom: 0;
+    left: 0;
+    padding: 15px 30px;
+    border-radius: 2px;
+    background-color: #fff;
+    color: $color-main;
+}
+
+.select-styled:after {
+    content: "";
+    width: 0;
+    height: 0;
+    border: 5px solid transparent;
+    border-color: #d4d4d4 transparent transparent;
+    position: absolute;
+    top: 50%;
+    transform: translateY(-50%);
+    right: 12px;
+}
+
+
+.select-styled.active:after,
+.select-styled:active:after {
+    top: 18px;
+    -webkit-transform: translateY(-50%);
+    -ms-transform: translateY(-50%);
+    transform: translateY(-50%);
+    border-color: transparent transparent #d4d4d4
+}
+
+.select-options {
+    display: none;
+    position: absolute;
+    top: 100%;
+    right: 0;
+    left: 0;
+    z-index: 9999;
+    margin: 0;
+    padding: 0;
+    background-color: #fff;
+    border: 1px solid #ededed;
+    list-style: none;
+}
+
+.select-options li {
+    margin: 0;
+    padding: 12px 30px;
+    border-top: 1px solid #ededed;
+    color: $color-main;
+}
+
+.select-options li:first-child {
+    border-top: none
+}
+
+.select-options li:hover {
+    background: #e9e9e9;
+}
+
+.select-options li[rel=hide] {
+    display: none
 }
 
 /* hover */
@@ -1244,6 +1387,83 @@ th:first-child {
     transition: all .35s cubic-bezier(.25, .46, .45, .94);
 }
 
-.promo__btn:hover{
-    background: linear-gradient(270deg,#ed1c24 0,#ffae00 100%);
+.promo__btn:hover,
+.promo__btn:focus,
+.promo__btn:active{
+    background: #ffae00;
+    color: #fff;
 }
+
+.callback-btn:hover,
+.form__button:hover {
+    background-color: #c50c13;
+    color: #fff;
+}
+
+a:hover {
+    color: #c50c13;
+}
+
+a:active,
+a:focus {
+    color: #ffc955;
+}
+
+.hamburger {
+    display: none;
+    z-index: 9999;
+}
+
+.hamburger__line {
+    width: 30px;
+    height: 2px;
+    background-color: #fff;
+    display: block;
+    margin: 5px auto;
+    -webkit-transition: all .3s ease-in-out;
+    -o-transition: all .3s ease-in-out;
+    transition: all .3s ease-in-out
+}
+
+.hamburger.is-active {
+    -webkit-transition: all .25s cubic-bezier(.25, .46, .45, .94);
+    -o-transition: all .25s cubic-bezier(.25, .46, .45, .94);
+    transition: all .25s cubic-bezier(.25, .46, .45, .94);
+    -webkit-transition-delay: .3s;
+    -o-transition-delay: .3s;
+    transition-delay: .3s;
+    -webkit-transform: rotate(45deg);
+    -ms-transform: rotate(45deg);
+    transform: rotate(45deg)
+}
+
+.hamburger.is-active .hamburger__line:nth-child(2) {
+    width: 0
+}
+
+.hamburger.is-active .hamburger__line:nth-child(1),
+.hamburger.is-active .hamburger__line:nth-child(3) {
+    -webkit-transition-delay: .2s;
+    -o-transition-delay: .2s;
+    transition-delay: .2s
+}
+
+.hamburger.is-active .hamburger__line:nth-child(1) {
+    -webkit-transform: translateY(2px);
+    -ms-transform: translateY(2px);
+    transform: translateY(2px)
+}
+
+.hamburger.is-active .hamburger__line:nth-child(3) {
+    -webkit-transform: translateY(-12px) rotate(90deg);
+    -ms-transform: translateY(-12px) rotate(90deg);
+    transform: translateY(-12px) rotate(90deg)
+}
+
+.callback-btn_mobile {
+    display: none;
+}
+
+
+
+@import "partials/media"
