--- a/src/style/partials/media.scss
+++ b/src/style/partials/media.scss
@@ -1,61 +1,52 @@
 @import "vars";
 
-@media only screen and (max-width: 1355px) {
-    .container-big {
+
+@media only screen and (max-width: 1200px) {
+
+    .container {
         width: 100%;
-    }
-
-    .s-gallery .owl-prev {
-        left: 0;
-    }
-
-    .s-gallery .owl-next {
-        right: 0;
+        max-width: 100%;
     }
 
     .header__logo {
-        width: 200px;
+        margin-left: 0;
     }
-}
 
-@media only screen and (max-width: 1100px) {
-    .header__contacts {
-        display: none;
+    .header__grid {
+        margin-left: 20px;
     }
+
 }
 
 @media only screen and (max-width: 1023px) {
-    .owl-dots {
-        bottom: 30px;
-        right: 15px;
-        top: auto;
-        transform: rotate(0deg);
+
+    .goods__image {
+        width: 200px;
     }
 
-    .s-gallery .owl-nav {
-        display: none;
+    .features__grid {
+        flex-wrap: wrap;
+        justify-content: space-around;
     }
 
-    .certificates__slider .owl-dots {
-        bottom: -40px;
-        left: 50%;
-        transform: translateX(-50%);
-        text-align: center;
+    .reviews__col {
+        width: 100%;
     }
 
-    .header__callback {
-        display: none;
+    .footer__center .footer__grid {
+        padding: 20px 15px;
+        height: auto;
+        flex-wrap: wrap;
+        justify-content: space-around;
     }
 
-    .header {
-        height: 65px;
+    .footer__bottom .footer__grid {
+        padding: 20px 0px 0px;
+        justify-content: space-around;
     }
 
-    .header__menu {
-        flex-direction: column;
-        justify-content: center;
-        align-items: center;
-        height: 70%;
+    .footer__col {
+        min-width: 240px;
     }
 
     .hamburger {
@@ -64,191 +55,169 @@
         right: 15px;
     }
 
-    .header__nav {
-        opacity: 0;
-        visibility: hidden;
-        position: absolute;
-        top: 65px;
-        left: 0;
-        background: rgba(0, 0, 0, .9);
-        width: 100%;
+    .header__links {
+        padding-right: 15px;
+    }
+
+    .hamburger {
+        display: block;
+    }
+
+    .logo__image {
+        position: relative;
         z-index: 9999;
-        height: auto;
-        bottom: 0;
-        -webkit-transform: translate(-50%, 25%);
-        -ms-transform: translate(-50%, 25%);
-        transform: translate(-50%, 25%);
-        -webkit-transition: all .35s cubic-bezier(.25, .46, .45, .94), -webkit-transform .85s cubic-bezier(.25, .46, .45, .94);
-        transition: all .35s cubic-bezier(.25, .46, .45, .94), -webkit-transform .85s cubic-bezier(.25, .46, .45, .94);
-        -o-transition: all .35s cubic-bezier(.25, .46, .45, .94), transform .85s cubic-bezier(.25, .46, .45, .94);
-        transition: all .35s cubic-bezier(.25, .46, .45, .94), transform .85s cubic-bezier(.25, .46, .45, .94);
-        transition: all .35s cubic-bezier(.25, .46, .45, .94), transform .85s cubic-bezier(.25, .46, .45, .94), -webkit-transform .85s cubic-bezier(.25, .46, .45, .94)
     }
 
-    .header__nav.is-visible {
-        opacity: 1;
-        visibility: visible;
-        -webkit-transform: translate(0, 0);
-        -ms-transform: translate(0, 0);
-        transform: translate(0, 0);
-        -webkit-transition: all .25s cubic-bezier(.25, .46, .45, .94), -webkit-transform .45s cubic-bezier(.25, .46, .45, .94);
-        transition: all .25s cubic-bezier(.25, .46, .45, .94), -webkit-transform .45s cubic-bezier(.25, .46, .45, .94);
-        -o-transition: all .25s cubic-bezier(.25, .46, .45, .94), transform .45s cubic-bezier(.25, .46, .45, .94);
-        transition: all .25s cubic-bezier(.25, .46, .45, .94), transform .45s cubic-bezier(.25, .46, .45, .94);
-        transition: all .25s cubic-bezier(.25, .46, .45, .94), transform .45s cubic-bezier(.25, .46, .45, .94), -webkit-transform .45s cubic-bezier(.25, .46, .45, .94)
-    }
-
-    .header__menu .menu__item {
-        font-size: 20px;
-        height: auto;
-        margin: 5px 0px;
-    }
-
-    .header__menu .menu__link {
-        color: #fff;
-        height: auto;
-        padding: 10px;
-    }
-
-    .header__menu .menu__item:after {
-        display: none;
-    }
-
-    .header__nav .header__contacts_mobile {
-        display: flex;
-        justify-content: center;
+    .header__top {
+        flex-direction: column;
         align-items: center;
-        height: 30%;
-        margin: 0px;
+        justify-content: center;
     }
 
     .header__number {
-        color: #fff;
-        font-size: 20px;
-        margin: 0px 0px 5px;
+        margin-bottom: 15px;
     }
 
-    .header__mail {
-        color: #fff;
-        font-size: 20px;
-        margin: 0px 0px 5px;
+    .header__links {
+        flex-direction: column;
     }
 
-    .header__logo {
-        width: 150px;
+    .header__top:before {
+        display: none;
     }
 
-    .header__nav .header__callback_mobile {
+    .header__social {
+        border-left: 0;
+        border-left: none;
+        padding: 0px;
+    }
+
+    .header__wrap {
+        margin-top: 10px;
+        display: flex;
+    }
+
+    .logo__image {
+        display: block;
+        justify-content: center;
+        max-width: 180px;
+    }
+
+    .header__container {
+        height: 80px;
+        justify-content: space-between;
+        padding-right: 80px;
+    }
+
+    .header__grid {
+        max-width: 100%;
+        width: 100%;
+        padding: 10px 15px 0px;
+        justify-content: center;
+        flex-direction: column-reverse;
+        margin-left: 0;
+        opacity: 0;
+        visibility: hidden;
+        position: absolute;
+        top: 0px;
+        left: 0;
+        background: rgba(0, 0, 0, .9);
+        width: 100%;
+        z-index: 999;
+        height: 100vh;
+        bottom: 0;
+        transition: all .35s cubic-bezier(.25, .46, .45, .94), transform .85s cubic-bezier(.25, .46, .45, .94), -webkit-transform .85s cubic-bezier(.25, .46, .45, .94)
+    }
+
+    .header__grid.is-visible {
+        opacity: 1;
+        visibility: visible;
+        transition: all .25s cubic-bezier(.25, .46, .45, .94), transform .45s cubic-bezier(.25, .46, .45, .94), -webkit-transform .45s cubic-bezier(.25, .46, .45, .94)
+    }
+
+    .header__grid .callback-btn {
+        margin-top: 20px;
+    }
+
+    .header__menu {
+        flex-direction: column;
+        justify-content: center;
+        align-items: center;
+    }
+
+    .menu__item {
+        font-size: rem(20px);
+        margin-bottom: 20px;
+    }
+
+    .callback-btn_mobile {
         display: block;
     }
+
 }
 
-@media only screen and (max-width: 970px) {
-    .row {
-        margin-left: 0;
-        margin-right: 0;
-    }
-
-    .title_h2 {
-        font-size: 20px;
-        line-height: normal;
-    }
-
-    .footer__link img {
-        max-width: 200px;
-    }
-
-    .container {
-        width: 100%;
-    }
-
-    .services__grid {
-        justify-content: space-around;
-    }
-
-    .clients__grid {
-        justify-content: space-around;
-    }
-
-    .footer__grid {
+@media only screen and (max-width: 900px) {
+    .work__grid {
         flex-wrap: wrap;
-        justify-content: space-around;
-        margin: 0px;
-    }
-
-    .footer__col {
-        min-width: 240px;
-        flex: 1 1 50%;
-        max-width: 50%;
-        margin-bottom: 30px;
-    }
-
-    .counts__col {
-        padding: 20px 35px;
-    }
-
-    .about__content {
-        padding-left: 30px;
-    }
-
-    .events__grid {
+        align-items: center;
         justify-content: space-around;
     }
 
-    .adv__grid {
+    .work__item {
+        margin: 10px;
+    }
+
+    .work__item .work__image {
+        height: 150px;
+    }
+
+    .work__column {
+        padding: 0px
+    }
+
+
+
+    .work__column,
+    .work__col {
+        display: flex;
+        align-items: center;
         justify-content: space-around;
     }
 
-    .catalog__grid,
-    .catalog__goods {
-        justify-content: space-around;
+    .work__grid .work__col:nth-child(2) {
+        order: 1;
     }
 
-    .goods__filter,
-    .filter__grid {
-        flex-wrap: wrap;
-    }
-
-    .filter__group:last-child {
-        max-width: 100%;
-        flex: 1 1 auto;
-    }
-
-    .filter__label {
-        flex: 2 1 100%;
-        margin: 0px 0px 10px;
-    }
-
-    .filter__group {
-        margin: 0px 0px 10px;
-        min-width: 210px;
-    }
 }
+
 
 @media only screen and (max-width: 767px) {
-    h1 {
+
+    body h1,
+    .title_h1 {
         font-size: 1.5rem;
         margin-bottom: 20px;
-        margin-top: auto;
     }
 
-    h2 {
+    body h2,
+    .title_h2 {
         font-size: 1.4rem;
     }
 
-    h3 {
+    body h3,
+    .title_h3 {
         font-size: 1.4rem;
     }
 
-    h4 {
+    body h4 {
         font-size: 1rem;
     }
 
-    h5 {
+    body h5 {
         font-size: 1rem;
     }
 
-    h6 {
+    body h6 {
         font-size: 1rem;
     }
 
@@ -262,67 +231,94 @@
         max-width: 100%;
     }
 
-    .counts__grid {
-        flex-wrap: wrap;
-        justify-content: space-around;
-    }
-
-    .promo__title {
-        font-size: rem(26px);
-    }
-
-    .promo__desc {
-        font-size: rem(14px);
-    }
-
-    .about__grid {
+    .goods__grid {
         flex-wrap: wrap;
     }
 
-    .about__content {
+    .goods__col {
+        width: 100%;
+    }
+
+    .goods__val {
+        line-height: normal;
+    }
+
+    .feature__row {
+        position: relative;
+        flex-wrap: wrap;
+    }
+
+    .feature__pic {
+        position: absolute;
+        z-index: -1;
+        top: 50%;
+        transform: translateY(-50%);
+        right: 55px;
+        opacity: 0.3;
+    }
+
+    .feature__content {
+        padding-right: 0px;
+        padding-bottom: 20px;
+    }
+
+    .feature__row:nth-child(even) .feature__content {
         padding-left: 0;
     }
 
-    .tabs__nav {
+    .promo__title {
+        font-size: rem(20px);
+    }
+
+    .promo__desc {
+        font-size: rem(16px);
+        line-height: normal;
+    }
+
+    .promo__item {
+        height: 400px;
+    }
+
+    .work__column {
         flex-wrap: wrap;
-    }
-
-    .tabs__btn {
-        flex: 1 1 100%;
-    }
-
-    .catalog__tabs>.catalog__container {
-        padding: 0px;
-    }
-
-    .remodal {
-        padding-left: 15px;
-        padding-right: 15px;
-    }
-
-    .promo__slide {
-        height: 570px;
-    }
-
-    .about__image{
-        min-width: auto;
     }
 
 
 }
 
-@media only screen and (max-width: 500px) {
-    .filter__label {
-        text-align: center;
-    }
+@media only screen and (max-width: 460px) {
 
-    .counts__col:after {
+    .callback-btn_mobile {
         display: none;
     }
 
-    .footer__col {
-        min-width: 240px;
-        flex: 1 1 100%;
-        max-width: 100%;
+    .goods__content {
+        position: absolute;
+        width: 100%;
+        height: 100%;
+        background-color: rgba($color-main, 0.7);
+        color: $color-main;
     }
+
+    .reviews__item {
+        flex-direction: column;
+    }
+
+    .reviews__image {
+        max-width: 100%;
+        height: 300px;
+    }
+
+    .work__col{
+        flex-wrap: wrap;
+    }
+
+    .work__column{
+        width: 50%;
+    }
+
+    .work__grid .work__col:nth-child(2){
+        width: 100%;
+    }
+
 }
